# IVD-Regulatory-Network-Atlas

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Caddyfile  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
apps/analysis/: __init__.py  apps.py  projection.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/core/: __init__.py  admin.py  aliases.py  apps.py  heartbeat.py  middleware.py  minio_client.py  models.py  observability.py  ollama.py  services.py  storage.py  tasks.py  urls.py  views.py
apps/corpus/: __init__.py  admin.py  apps.py  models.py  pubmed_query.py  receivers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/dashboard/: __init__.py  apps.py  context_processors.py  urls.py  views.py
apps/extract/: __init__.py  admin.py  apps.py  models.py  prompts.py  routing.py  schemas.py  services.py  tasks.py
apps/graph/: __init__.py  admin.py  apps.py  curation_export.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/monitoring/: __init__.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
apps/networks/: __init__.py  admin.py  apps.py  models.py  services.py
apps/papers/: __init__.py  admin.py  apps.py  chunking.py  doco.py  grobid.py  jats.py  models.py  services.py  tasks.py
apps/sbml/: __init__.py  admin.py  apps.py  builder.py  exporters.py  models.py  packaging.py  services.py  tasks.py  urls.py  versioning.py  views.py
apps/schedule/: __init__.py  apps.py  beat_schedule.py  metrics.py  models.py  ratelimit.py  services.py  tasks.py  watermarks.py
apps/verify/: __init__.py  admin.py  apps.py  emails.py  models.py  prompts.py  services.py  state_machine.py  tasks.py  urls.py  views.py
deploy/: rsync-offhost.sh
deploy/pgbackrest/: crontab  entrypoint.sh  pgbackrest.conf  restore-test.sh
deploy/postgres/: init-pgbackrest.sh  postgresql.conf
deploy/prometheus/: prometheus.yml
docs/: deployment-summary-email.md  onboarding-biologist.md  runbook.md  security-review.md  signoff-ceremony.md
interactome/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
scripts/: tag-v1-release.sh  verify.sh
(+216 files in other folders)
