[tool.poetry]
name = "interactome"
version = "0.1.0"
description = "Autonomous PubMed → SBML-qual pipeline for intervertebral disc regulatory networks."
authors = ["Francis Chemorion <francis.chemorion@upf.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
celery = {extras = ["redis"], version = "^5.3"}
django-celery-beat = "^2.6"
django-celery-results = "^2.5"
psycopg = {extras = ["binary"], version = "^3.2"}
redis = "^5.0"
gunicorn = "^23.0"
requests = "^2.32"
structlog = "^24.4"
django-structlog = "^9.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-django = "^4.8"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
ruff = "^0.6"
mypy = "^1.10"
django-stubs = {extras = ["compatible-mypy"], version = "^5.0"}
types-requests = "^2.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
