[tool.poetry]
name = "interactome"
version = "0.1.0"
description = "Autonomous PubMed → SBML-qual pipeline for intervertebral disc regulatory networks."
authors = ["Francis Chemorion <francis.chemorion@upf.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35"
celery = {extras = ["redis"], version = "^5.3"}
django = "^5.0"
django-celery-beat = "^2.6"
django-celery-results = "^2.5"
django-structlog = "^9.0"
gunicorn = "^23.0"
httpx = {extras = ["http2"], version = "^0.27"}
lxml = "^5.3"
pydantic = "^2.9"
tenacity = "^9.0"
nltk = "^3.9"
psycopg = {extras = ["binary"], version = "^3.2"}
python-dotenv = "^1.0"
pyyaml = "^6.0"
redis = "^5.0"
requests = "^2.32"
structlog = "^24.4"
tiktoken = "^0.7"

[tool.poetry.group.dev.dependencies]
django-stubs = {extras = ["compatible-mypy"], version = "^5.0"}
factory-boy = "^3.3"
freezegun = "^1.5"
mypy = "^1.10"
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-django = "^4.8"
pytest-httpx = "^0.30"
pytest-mock = "^3.14"
responses = "^0.25"
ruff = "^0.6"
types-requests = "^2.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
